Fix: date overflow bug, add column to swagger docs schema
